2009-06-25  Miguel de Icaza  <miguel@novell.com>

	* Int32.cs: Validate the NumberStyles, passes Int/Int32Parse2.exe

	Fix regression introduced in 2005, we need to throw
	ArgumentNullException on Parse.

2009-06-25  Miguel de Icaza  <miguel@novell.com>

	* Int32.cs: Fix regression introduced in 2005, we need to throw
	ArgumentNullException on Parse.

2009-06-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DateTime.cs: ignore MinValue to avoid DateTimeOffset ctor throwing
	when adjusting for TZ.

2009-06-22  Miguel de Icaza  <miguel@novell.com>

	* String.cs: In Silverlight the whitespace characters 0x202f and
	0x205f are considered for Trim and Split purposes. 

2009-06-21  Marek Safar  <marek.safar@gmail.com>

	* Tuples.cs: Add Equals, GetHashCode.

2009-06-21  Zoltan Varga  <vargaz@gmail.com>

	* IntPtr.cs (.ctor): Disable the check in the long ctor until we
	can figure out how to do it properly.

2009-06-20  Zoltan Varga  <vargaz@gmail.com>

	* IntPtr.cs (.ctor): Allow long values whose 31th bit is set.

2009-06-18 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DateTime.cs: quick fix for the 1.x build.

2009-06-18 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* AppDomainSetup.cs: update attribute.
	* TermInfoDriver.cs: ensure we are initialized in CheckWindowDimensions().
	* DateTimeOffset.cs: Implement Parse().
	* DateTime.cs: add 'zzz' to the list of default time formats. Return a
	DateTimeOffset from _DoParse. Fixed the offset minutes when the
	timezone is specified as a negative one.
	* Console.cs: updates for MoveBufferArea().
	* AppDomainManager.cs: implement EntryAssembly.
	* AppDomain.cs: update attribute.

2009-06-15  Atsushi Enomoto  <atsushi@ximian.com>

	* Environment.cs : bump corlib version.

2009-06-12  Bill Holmes  <billholmes54@gmail.com>

	* Variant.cs (GetValue):  Changing the bool case to use the short value.  
	  This is to avoid junk in the high word.

	Contributed under MIT/X11 license.
